--- a/AOC_Day2.ipynb
+++ b/AOC_Day2.ipynb
@@ -175,7 +175,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.close()"
+   ]
   },
   {
    "cell_type": "code",
