--- a/AOC_Day3.ipynb
+++ b/AOC_Day3.ipynb
@@ -215,7 +215,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.close()"
+   ]
   }
  ],
  "metadata": {
