--- a/AOC_Day6.ipynb
+++ b/AOC_Day6.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://adventofcode.com/2020/day/6"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 166,
    "metadata": {},
