--- a/AOC_Day8.ipynb
+++ b/AOC_Day8.ipynb
@@ -206,7 +206,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.close()"
+   ]
   },
   {
    "cell_type": "code",
